<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".activities.MainActivity">

    <ImageButton
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="#00FFFFFF"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:src="@drawable/ic_baseline_settings_power_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_infix"
        android:layout_width="0dp"

        android:layout_height="0dp"
        android:gravity="right|center"
        android:paddingEnd="16dp"
        android:scrollbars="horizontal"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/res_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/res_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/key_pad">

        <TextView
            android:id="@+id/tv_answer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center|right"

            android:padding="16dp"
            android:scrollbars="horizontal"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@id/backspace"
            app:layout_constraintHorizontal_bias="100"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/backspace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:contentDescription="@string/app_name"
            android:paddingHorizontal="16dp"
            android:src="@drawable/ic_baseline_backspace_24"
            android:tint="@color/blue_500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/sep_30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/key_pad"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sep_30">

        <Button
            android:id="@+id/tv_H"
            style="@style/CacluatorButton"
            android:layout_width="0dp"
            android:layout_height="0dp"

            android:background="@drawable/btn_shape"
            android:text="H"
            android:textColor="@color/blue_900"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_1"
            app:layout_constraintEnd_toStartOf="@id/tv_A"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/tv_A"
            style="@style/CacluatorButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/btn_shape"
            android:text="A"
            android:textColor="@color/blue_900"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_2"
            app:layout_constraintEnd_toStartOf="@id/tv_clear"
            app:layout_constraintStart_toEndOf="@id/tv_H"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/tv_clear"
            style="@style/CacluatorButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/btn_shape"
            android:text="C"
            android:textColor="@color/blue_900"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_3"
            app:layout_constraintEnd_toStartOf="@id/tv_divide"
            app:layout_constraintStart_toEndOf="@id/tv_A"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/tv_divide"

            style="@style/CacluatorButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/btn_shape"
            android:text="/"
            android:textColor="@color/blue_900"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/mul"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_clear"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/tv_1"
            style="@style/CacluatorButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/btn_shape"
            android:text="1"
            app:layout_constraintBottom_toTopOf="@id/tv_4"
            app:layout_constraintEnd_toStartOf="@id/tv_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_H" />

        <Button
            android:id="@+id/tv_2"
            style="@style/CacluatorButton"

            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/btn_shape"
            android:text="2"
            app:layout_constraintBottom_toTopOf="@id/tv_5"
            app:layout_constraintEnd_toStartOf="@id/tv_3"
            app:layout_constraintStart_toEndOf="@id/tv_1"
            app:layout_constraintTop_toBottomOf="@id/tv_A" />

        <Button
            android:id="@+id/tv_3"
            style="@style/CacluatorButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/btn_shape"

            android:text="3"
            app:layout_constraintBottom_toTopOf="@id/tv_6"
            app:layout_constraintEnd_toStartOf="@id/mul"
            app:layout_constraintStart_toEndOf="@id/tv_2"
            app:layout_constraintTop_toBottomOf="@id/tv_clear" />

        <Button
            android:id="@+id/mul"
            style="@style/CacluatorButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/btn_shape"
            android:text="x"
            android:textAllCaps="false"
            android:textColor="@color/blue_900"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_3"
            app:layout_constraintTop_toBottomOf="@id/tv_divide" />


        <Button
            android:id="@+id/tv_4"
            style="@style/CacluatorButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/btn_shape"
            android:text="4"
            app:layout_constraintBottom_toTopOf="@id/tv_7"
            app:layout_constraintEnd_toStartOf="@id/tv_5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_1" />

        <Button
            android:id="@+id/tv_5"
            style="@style/CacluatorButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/btn_shape"

            android:text="5"
            app:layout_constraintBottom_toTopOf="@id/tv_8"
            app:layout_constraintEnd_toStartOf="@id/tv_6"
            app:layout_constraintStart_toEndOf="@id/tv_4"
            app:layout_constraintTop_toBottomOf="@id/tv_2" />

        <Button
            android:id="@+id/tv_6"
            style="@style/CacluatorButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/btn_shape"

            android:text="6"
            app:layout_constraintBottom_toTopOf="@id/tv_9"
            app:layout_constraintEnd_toStartOf="@id/tv_add"
            app:layout_constraintStart_toEndOf="@id/tv_5"
            app:layout_constraintTop_toBottomOf="@id/tv_3" />

        <Button
            android:id="@+id/tv_add"
            style="@style/CacluatorButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/btn_shape"
            android:text="+"
            android:textColor="@color/blue_900"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_minus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_6"
            app:layout_constraintTop_toBottomOf="@id/mul" />

        <Button
            android:id="@+id/tv_7"
            style="@style/CacluatorButton"
            android:layout_width="0dp"
            android:layout_height="0dp"

            android:background="@drawable/btn_shape"
            android:text="7"
            app:layout_constraintBottom_toTopOf="@id/e1"
            app:layout_constraintEnd_toStartOf="@id/tv_8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_4" />

        <Button
            android:id="@+id/tv_8"
            style="@style/CacluatorButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/btn_shape"

            android:text="8"
            app:layout_constraintBottom_toTopOf="@id/tv_0"
            app:layout_constraintEnd_toStartOf="@id/tv_9"
            app:layout_constraintStart_toEndOf="@id/tv_7"
            app:layout_constraintTop_toBottomOf="@id/tv_5" />

        <Button
            android:id="@+id/tv_9"
            style="@style/CacluatorButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/btn_shape"
            android:text="9"
            app:layout_constraintBottom_toTopOf="@id/e2"
            app:layout_constraintEnd_toStartOf="@id/tv_minus"
            app:layout_constraintStart_toEndOf="@id/tv_8"
            app:layout_constraintTop_toBottomOf="@id/tv_6" />

        <Button
            android:id="@+id/tv_minus"
            style="@style/CacluatorButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/btn_shape"
            android:text="-"
            android:textColor="@color/blue_900"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/equals"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_9"
            app:layout_constraintTop_toBottomOf="@id/tv_add" />

        <TextView
            android:id="@+id/e1"
            style="@style/CacluatorButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/btn_shape"
            android:enabled="false"
            android:text="7"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_7" />

        <Button
            android:id="@+id/tv_0"
            style="@style/CacluatorButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/btn_shape"
            android:text="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/e2"
            app:layout_constraintStart_toEndOf="@id/e1"
            app:layout_constraintTop_toBottomOf="@id/tv_8" />

        <TextView
            android:id="@+id/e2"
            style="@style/CacluatorButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/btn_shape"
            android:enabled="false"
            android:text="7"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/equals"
            app:layout_constraintStart_toEndOf="@id/tv_0"
            app:layout_constraintTop_toBottomOf="@id/tv_9" />

        <Button
            android:id="@+id/equals"
            style="@style/CacluatorButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/btn_shape"
            android:backgroundTint="@color/blue_500"
            android:text="="
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/e2"
            app:layout_constraintTop_toBottomOf="@id/tv_minus" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>